@@ -78,6 +78,8 @@ Set the network filter for clients.
 
 If a server is chained after a PROXY Protocol server, the used client address will be the one in the PROXY Protocol message.
 
+This ACL will be checked before we select the anonymous auth method, so an auth failed error will be returned to client.
+
 **default**: not set
 
 .. versionadded:: 1.7.20
